@@ -2,7 +2,7 @@
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
 <!-- Generated with glade3
 	Version: 3.0.1
-	Date: Wed Nov  1 21:41:58 2006
+	Date: Mon Nov 20 00:38:15 2006
 	User: markuz
 	Host: cucusa
 -->
@@ -35,7 +35,7 @@
                           <widget class="GtkVBox" id="vbox2">
                             <property name="visible">True</property>
                             <child>
-                              <widget class="GtkCheckButton" id="checkbutton1">
+                              <widget class="GtkCheckButton" id="artist">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="label" translatable="yes">Artist</property>
@@ -48,7 +48,7 @@
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkCheckButton" id="checkbutton2">
+                              <widget class="GtkCheckButton" id="album">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="label" translatable="yes">Album</property>
@@ -62,7 +62,7 @@
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkCheckButton" id="checkbutton3">
+                              <widget class="GtkCheckButton" id="type">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="label" translatable="yes">Type</property>
@@ -76,9 +76,9 @@
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkCheckButton" id="checkbutton4">
+                              <widget class="GtkCheckButton" id="length">
                                 <property name="visible">True</property>
-                                <property name="label" translatable="yes">Lenght</property>
+                                <property name="label" translatable="yes">Length</property>
                                 <property name="draw_indicator">True</property>
                               </widget>
                               <packing>
@@ -86,13 +86,23 @@
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkCheckButton" id="checkbutton5">
+                              <widget class="GtkCheckButton" id="track_number">
                                 <property name="visible">True</property>
                                 <property name="label" translatable="yes">Track number</property>
                                 <property name="draw_indicator">True</property>
                               </widget>
                               <packing>
                                 <property name="position">4</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkCheckButton" id="play_count">
+                                <property name="visible">True</property>
+                                <property name="label" translatable="yes">Play count</property>
+                                <property name="draw_indicator">True</property>
+                              </widget>
+                              <packing>
+                                <property name="position">5</property>
                               </packing>
                             </child>
                           </widget>
@@ -149,11 +159,12 @@
                           <widget class="GtkVBox" id="vbox4">
                             <property name="visible">True</property>
                             <child>
-                              <widget class="GtkComboBox" id="combobox1">
+                              <widget class="GtkComboBox" id="audiosink">
                                 <property name="visible">True</property>
                                 <property name="items" translatable="yes">gconfaudiosink
 alsasink
-esdsink</property>
+esdsink
+autoaudiosink</property>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
@@ -192,7 +203,7 @@ esdsink</property>
                           <widget class="GtkVBox" id="vbox5">
                             <property name="visible">True</property>
                             <child>
-                              <widget class="GtkComboBox" id="combobox2">
+                              <widget class="GtkComboBox" id="videosink">
                                 <property name="visible">True</property>
                                 <property name="items" translatable="yes">ximagesink
 xvimagesink</property>
